[package]
name = "tsne"
version = "0.1.0"
authors = ["Daniel Tse <daniel@overpunch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"mnist" = "*"
"ndarray" = "0.12"
ndarray-linalg = { version = "0.12" }
openblas-src = { version = "0.7.0", features = ["system"] }
"itertools" = "*"
"ndarray-rand" = "0.8"
"rand" = "0.5"
"minifb" = "*"
float-ord = "0.2.0"
libc = "*"
rayon = "*"
